arm64: Viewport and Timeline jump large distances when scrolling the pointer off screen using Shift-Middle Mouse #88386
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#88386
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: macOS-11.3.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Apple 4.1 Metal - 71.5.9
Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-05-18 09:58, hash:
aa06be9148
Also the 3.0 ARM Alpha is experiencing the same bug.
Worked: Don't remember the latest version of ARM that worked. The Intel version had this issue a month or so ago but has been resolved. Not sure if those changes got passed on to the ARM versions.
I waited on filing a bug report on count of Intel version getting resolved, so I assumed it would be passed onto the ARM versions.
Short description of error
Viewport and Timeline will jump large distances when scrolling the pointer off screen using Shift-Middle Mouse. View port will jump 60 to 70 meters and timeline may move 500 frames or more.
Exact steps for others to reproduce the error
Open default Blender (ARM) move mouse point off to the left of screen using Shift-Middle Mouse; Viewport will jump.
Hover mouse pointer over the timeline and scroll mouse off screen using Shift-Middle Mouse; Timeline will jump several hundred frames.
I want to add that it's getting worse. You don't have to coerce the edge to make the entire viewport jump, you just move the pointer past the edge.
I also want to remind that this doesn't happen in the Intel version for Mac, as it has been resolved.
It only happens in the Arm 2.93 & 3.0 versions now.
Including video: It shows Viewport jump and Timeline jump.
Viewport Jump.mov
Added subscriber: @CookItOff
#87820 was marked as duplicate of this issue
Added subscriber: @ankitm
Event logs my help identify the cause
/path/to/Blender.app/Contents/MacOS/Blender --debug-all > ~/Downloads/mouse_jump_logs.txt 2>&1
https://docs.blender.org/manual/en/latest/advanced/command_line/arguments.html#debug-options
https://docs.blender.org/manual/en/latest/advanced/command_line/launch/macos.html#details
Changed status from 'Needs Triage' to: 'Needs User Info'
Looks like it’s similar to or same as this bug report filed for Linux.
https://developer.blender.org/T86033
Added subscriber: @lichtwerk
Just found this btw.: #75528 (Continuous Grab occasionally jumping when going across region border at high mouse polling rate)
Yeah, it looks to be the same. I want to add, as I posted in the description, that it seems to be resolved on the Intel MacOS versions but still an issue on the ARM64 builds.
Added subscriber: @AgentSam-2
Added a video last week showing the bug. Any news on this?
Intel version of Blender on M1 works fine with Rosetta.
ARM version of Blender on the same machine has the bug.
Using same mouse and computer, only diffrrncyis the Blender versions.
Not sure what a log would show since I’m not performing any action minus moving the viewport.
Thanks!
@ankitm sorry but I didn't know you were part of the development team :) . I thought it was common knowledge that you can't pan the mouse off screen with Shift-MMB while in debug mode from Terminal or CMD line, so the info you're asking for can't be performed for my bug.
That's why I haven't provide the debug report, because it's impossible to perform the action needed with (--debug-all)
Best thing I can think of to provide is a video of the action, which I did. If you need something else let me know.
Changed status from 'Needs User Info' to: 'Needs Triage'
Added subscribers: @Roderick-Hietbrink, @someuser
Viewport and Timeline will jump large distances when scrolling the pointer off screen using Shift-Middle Mouse ARM64to arm64: Viewport and Timeline jump large distances when scrolling the pointer off screen using Shift-Middle MouseChanged status from 'Needs Triage' to: 'Confirmed'
Added subscribers: @jenkm, @PrototypeNM1
@jenkm You around to poke at this issue again? I think it could be solved once and for all by using the cursor offsets as in the
GHOST_kGrabHide
case for theGHOST_kGrabWrap
case inGHOST_SystemCocoa.mm
.This issue was referenced by
6489f2212b
This issue was referenced by
215734bc52
Changed status from 'Confirmed' to: 'Resolved'